cabal-version:      3.14
name:               manul

version:            0.1.0.0
synopsis:           An interpreted programming language written in Haskell.
homepage:           https://github.com/liamslj13/manul
license:            MIT
license-file:       LICENSE
author:             Liam Jay
maintainer:         liamslj13@gmail.com
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable manul
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   app

    default-language: GHC2021
